# NeuromorphicModelling

./: .clang-format  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ResultsEvaluation/: evaluate_results.py
RoutingEval/: Makefile
RoutingEval/common/: HBSNeuronMapper.cpp  HBSNeuronMapper.h  HBSRoutingSimulator.cpp  HBSRoutingSimulator.h  NeuronMapper.cpp  NeuronMapper.h  RoutingSimulator.cpp  RoutingSimulator.h  RunSimulator  SpikeGenerator.cpp  SpikeGenerator.h  Utils.cpp  Utils.h  main.cpp  makefile
RoutingEval/scripts/: compressData.sh
SNNTraining/: dataset.py  evaluate_spike_activity.py  export_nir.py  generate_packets.py  graph.py  map_neurons.py  mapping.py  model.py  options.py  requirements.txt  run.py  run_sample.py  sample.py  sweep_handler.py  train_model.py  utils.py
neuromorphic/: __init__.py  config.py  dataset.py  graph.py  mapping.py  model.py  packets.py  sweep.py  trainer.py  utils.py
scripts/: evaluate_activity.py  evaluate_results.py  export_nir.py  map_neurons.py  train.py
tests/: conftest.py  test_config.py  test_dataset.py  test_mapping.py  test_model.py  test_utils.py
